[package]
name = "zeppelin"
version = "0.1.0"
authors = ["José González Krause <josef@hackercat.ninja>"]
categories = ["command-line-utilities"]
description = "A command-line tiny file server able to run on close to any system without dependencies"
homepage = "https://github.com/hcninja/zeppelin"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hcninja/zeppelin"
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
actix-multipart = "0.2.0"
sanitize-filename = "0.2.1"
colored = "2.0.0"

[profile.release]
lto = true
codegen-units = 1
